--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Documentación API - Cognicare</title>
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@4/swagger-ui.css">
+    <title>Prueba de Documentación API</title>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/swagger-ui-dist@5/swagger-ui.css">
     <style>
-        html { box-sizing: border-box; overflow: -moz-scrollbars-vertical; overflow-y: scroll; }
+        html { box-sizing: border-box; }
         *, *:before, *:after { box-sizing: inherit; }
         body { margin:0; background: #fafafa; }
     </style>
 </head>
 <body>
     <div id="swagger-ui"></div>
-    <script src="https://unpkg.com/swagger-ui-dist@4/swagger-ui-bundle.js"></script>
-    <script src="https://unpkg.com/swagger-ui-dist@4/swagger-ui-standalone-preset.js"></script>
+    <script src="https://unpkg.com/swagger-ui-dist@5/swagger-ui-bundle.js"></script>
     <script>
     window.onload = function() {
-        // Construye la UI de Swagger
         const ui = SwaggerUIBundle({
-            // URL a tu archivo swagger.json alojado en GitHub Pages
-            url: "https://juanrv.github.io/prueba-documentacion/swagger.json",
+            // URL relativa al archivo swagger.json en tu repositorio
+            url: "./swagger.json",
             dom_id: '#swagger-ui',
             deepLinking: true,
             presets: [
                 SwaggerUIBundle.presets.apis,
-                SwaggerUIStandalonePreset
             ],
-            plugins: [
-                SwaggerUIBundle.plugins.DownloadUrl
-            ],
-            layout: "StandaloneLayout"
+            layout: "BaseLayout"
         });
-        window.ui = ui;
     }
     </script>
 </body>
